# FormatFusion

./: Cargo.toml  INSTALL.md  README.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: formater.rs  main.rs
src/commands/: mod.rs
src/commands/format/: formater.rs  mod.rs
src/commands/ip/: mod.rs
