[package]
name = "skit"
version = "0.1.0"
edition = "2021"
authors = ["Sndav <i@sndav.org>"]
description = "A powerful command-line developer toolkit with text formatting, network utilities, and more"
license = "GPL-3.0"
repository = "https://github.com/Sndav/Skit"
readme = "README.md"
keywords = ["developer-tools", "cli", "formatting", "network", "utilities"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.5.0"
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde_json = "1"
serde_yaml = "0.9"
xmltree = "0.11"
minreq = { version = "2", features = ["json-using-serde", "https"] }

[[bin]]
name = "skit"
path = "src/main.rs"